organizaçao-pasta-com-namespace

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app",
+            "Router\\": "route",
             "Mardonis\\PhpMvcSiteCms\\": "src"
         }
     },
