--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "phpunit/phpunit": "^9.5",
         "illuminate/database": "^8.64",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
